# nexus-cos

./: .EMERGENT_MASTER_VERIFICATION.sh.swp  .dockerignore  .env  .env.deployment  .env.development  .env.example  .env.pf  .env.pf-master.example  .env.pf.example  .env.production  .env.production.vps  .env.template  .gitignore  .nexus_phase_10_state  .thiio-handoff-complete  29_SERVICES_DEPLOYMENT.md  30_FOUNDERS_LOOP_TIMELINE.md  ACCESS_MANIFEST_PHASE_1_2_2.5.md  ACTIVATE_ALL_SERVICES.sh  AGENT_HANDOFF.md  AGENT_HANDOFF_COMPLETE.md  AGENT_HANDOFF_READY.md  AI_DEVELOPER_DEPLOYMENT_GUIDE.md  API_ROUTES_DEPLOYMENT_GUIDE.md  API_ROUTES_IMPLEMENTATION.md  API_ROUTING_FIX_DEPLOYMENT.md  API_ROUTING_FIX_SUMMARY.md  ARCHITECTURE_CLARIFICATION_IMVU_HANDSHAKE.md  ARCHITECTURE_DIAGRAM.md  BACKEND_API_SERVICE_FIX.md  BACKEND_LOGS_FIX.md  BETA_LAUNCH_FIXES_COMPLETE.md  BETA_LAUNCH_ONE_LINER.sh  BETA_LAUNCH_QUICK_REFERENCE.md  BETA_LAUNCH_QUICK_REFERENCE_CARD.md  BETA_LAUNCH_READINESS_COMPREHENSIVE.md  BETA_LAUNCH_READY.md  BETA_LAUNCH_READY_V2025.md  BETA_LAUNCH_START_HERE.md  BLACK_SCREEN_FIX_SUMMARY.md  (+1011 more)
backend/: .env.example  Dockerfile  Dockerfile.python  PYYAML_FIX.md  alembic.ini  app.js  health.js  health.py  index.ts  main.py  package.json  pyproject.toml  requirements-minimal.txt  requirements.txt  requirements.txt.backup  server.js  tsconfig.json
backend/__tests__/: health.test.js
backend/app/: main.py
backend/controllers/: mainController.ts
backend/core/: feature-flag-service.js
backend/migrations/: env.py
backend/routes/: api.ts
backend/src/: index.ts  (+1 more)
(+1715 files in other folders)
